@@ -1,3 +1,8 @@
+2015-11-14  Marek Polacek  <polacek@redhat.com>
+
+	* c-decl.c: Use RECORD_OR_UNION_TYPE_P throughout.
+	* c-typeck.c: Likewise.
+
 2015-11-13  David Malcolm  <dmalcolm@redhat.com>
 
 	* c-decl.c (warn_defaults_to): Pass line_table to
